[project]
name = "habit-tracker"
version = "0.1.0"
description = ""
authors = [
    {name = "gozilla",email = "wpdr5r@gmail.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "fastapi[standard] (>=0.134.0,<0.135.0)",
    "sqlalchemy (>=2.0.47,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
